--- a/UmbracoCV/Views/Master.cshtml
+++ b/UmbracoCV/Views/Master.cshtml
@@ -25,7 +25,7 @@
     <!-- Navigation -->
     <div class="container">
         <nav class="navbar navbar-expand navbar-light">
-            <a class="navbar-brand font-weight-bold" href="index.html">UmbracoTV</a>
+            <a class="navbar-brand font-weight-bold" href="/">UmbracoCV</a>
             <!-- Links -->
         <ul class="navbar-nav">
             @foreach (var item in selection)
