--- a/UmbracoCV/Views/ArticlesMain.cshtml
+++ b/UmbracoCV/Views/ArticlesMain.cshtml
@@ -11,7 +11,6 @@
 		<div class="jumbotron text-center jumbotron-fluid">
 			<div class="container">
 				<h1 class="display-1">@Model.Value("blogTitle")</h1>
-				<p>What we do when we do what we do - and why!</p>
 			</div>
 		</div>
 
@@ -28,7 +27,8 @@
 			<!-- Latest blog posts -->
 			<div class="row section">
 				<div class="col-md-12">
-					<h3>Latest stories</h3>
+					<h3>@Model.Value("blogPostPresentationText")
+</h3>
 					
 @{
 	var selection = Umbraco.Content(Guid.Parse("dadc6f54-48f9-47a9-b415-689ee44a69dc"))
@@ -51,45 +51,5 @@
 				</div>
 			</div>
 
-			<!-- Blog Post Query goes here. -->
-			<div class="row">
-				<div class="col-md-4">
-					<a href="Blogpost.html" class="featured-link"><div class="thumbnail-blog">
-						<div class="thumbnail-img" style="background-image:url('/images/Press.jpg')"></div>
-						<h5>Umbraco <3 YouTube</h5>
-					</div></a>
-				</div>
-				<div class="col-md-4">
-					<a href="#" class="featured-link"><div class="thumbnail-blog">
-						<div class="thumbnail-img" style="background-image:url('/images/sofie-hammock.jpg')"></div>
-						<h5>A day in a Documentation Curators life</h5>
-					</div></a>
-				</div>
-				<div class="col-md-4">
-					<a href="#" class="featured-link"><div class="thumbnail-blog">
-						<div class="thumbnail-img" style="background-image:url('/images/heart-DNS.png')"></div>
-						<h5>New product: Umbraco Heartcore</h5>
-					</div></a>
-				</div>
-
-				<div class="col-md-4">
-					<a href="#" class="featured-link"><div class="thumbnail-blog">
-						<div class="thumbnail-img" style="background-image:url('/images/uPackage.png')"></div>
-						<h5>Packages.. Packages every where!</h5>
-					</div></a>
-				</div>
-				<div class="col-md-4">
-					<a href="#" class="featured-link"><div class="thumbnail-blog">
-						<div class="thumbnail-img" style="background-image:url('/images/CG-virgins.JPG')"></div>
-						<h5>Just how flexible is Umbraco?</h5>
-					</div></a>
-				</div>
-				<div class="col-md-4">
-					<a href="#" class="featured-link"><div class="thumbnail-blog">
-						<div class="thumbnail-img" style="background-image:url('/images/confetti.jpg')"></div>
-						<h5>Festival season of 2020</h5>
-					</div></a>
-				</div>
-			</div>
 
 		</div>
