Finished CV Page and created new AboutMe Page. Also added some pictures for possible future use.

--- a/UmbracoCV/Views/CVPage.cshtml
+++ b/UmbracoCV/Views/CVPage.cshtml
@@ -2,70 +2,131 @@
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.CVpage>
 @using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
 @{
-	Layout = "Master.cshtml";
+    Layout = "Master.cshtml";
 }
 
-		
-		<!-- Jumbotron, w title -->
-		<div class="jumbotron text-center jumbotron-fluid">
-			<div class="container">
-				<h1 class="display-1">@Model.Value("pageTitle")</h1>
-			</div>
-		</div>
-		
-				<!-- For the "Header" of CV Page -->
+<!-- Jumbotron, w title -->
+<div class="jumbotron text-center jumbotron-fluid">
+    <div class="container" style="padding-top: 10px;">
+        <h1 class="display-1">@Model.Value("pageTitle")</h1>
+    </div>
+</div>
 
-		
-				<div>
-			<div class="header" style="text-align:center;width: 300px;margin: 0 auto;">
-				<h1>@Model.Value("cvOwnersName")</h1>
-			</div>
-		<div class="container">
+<!-- For the "Header" of CV Page -->
 
-			<div class="row section">
-				<div class="col-md-12">
-@{
-    if (Model.Value<string[]>("nonURL_HeaderInformation").Length > 0)
-    {
-        <ul>
-            @foreach (var item in Model.Value<string[]>("nonURL_HeaderInformation"))
-            {
-                <li>@item</li>
-            }
-        </ul>
-    }
-}
-@using Umbraco.Cms.Core.Models
-@{
-    var links = Model.Value<IEnumerable<Link>>("cV_URL");
-    if (links.Any())
-    {
-        <ul>
-            @foreach (var link in links)
-            {
-                <li><a href="@link.Url" target="@link.Target">@link.Name</a></li>
-            }
-        </ul>
-    }
-}
+<div>
+    <div class="header" style="text-align:center;width: 300px;margin: 0 auto;">
+        <h1>@Model.Value("cvOwnersName")</h1>
+    </div>
+    <div class="container" style="padding-top: 10px;">
 
-				</div>				
-			</div>
 
-		</div>
+                @{
+                    if (Model.Value<string[]>("nonURL_HeaderInformation").Length > 0)
+                    {
+                        <ul>
+                            @foreach (var item in Model.Value<string[]>("nonURL_HeaderInformation"))
+                            {
+                                <li>@item</li>
+                            }
+                        </ul>
+                    }
+                }
+                @using Umbraco.Cms.Core.Models
+                @{
+                    var links = Model.Value<IEnumerable<Link>>("cV_URL");
+                    if (links.Any())
+                    {
+                        <ul>
+                            @foreach (var link in links)
+                            {
+                                <li><a href="@link.Url" target="@link.Target">@link.Name</a></li>
+                            }
+                        </ul>
+                    }
+                }
 
-		
+    </div>
+        </div>
 
-		<!-- This is where we're going to render our content -->
-		
-		<div class="container">
 
-			<div class="row section">
-				<div class="col-md-12">
+    <!-- For the Content group of CV Page -->
 
-@Model.Value("bodyText")
+    <div class="container" style="padding-top: 10px;">
+        <h2>@Model.Value("bodyTitle")</h2>
+                @Model.Value("bodyText")
+    </div>
 
-				</div>				
-			</div>
+    <!-- For the Qualifications group of CV Page -->
 
-		</div>
+    <div class="container" style="padding-top: 10px;">
+        <h2>@Model.Value("qualificationsTitle")</h2>
+
+                @{
+                    if (Model.Value<string[]>("qualificationsList").Length > 0)
+                    {
+                        <ul>
+                            @foreach (var item in Model.Value<string[]>("qualificationsList"))
+                            {
+                                <li>@item</li>
+                            }
+                        </ul>
+                    }
+                }
+
+    </div>
+
+    <!-- For the Education group of CV Page -->
+    <div class="container" style="padding-top: 10px;">
+        <h2>@Model.Value("educationTitle")</h2>
+                @Model.Value("educationContentBody")
+    </div>
+
+    <!-- For the Languages group of CV Page -->
+
+    <div class="container" style="padding-top: 10px;">
+        <h2>@Model.Value("languagesTitle")</h2>
+
+
+                @{
+                    if (Model.Value<string[]>("languagesList").Length > 0)
+                    {
+                        <ul>
+                            @foreach (var item in Model.Value<string[]>("languagesList"))
+                            {
+                                <li>@item</li>
+                            }
+                        </ul>
+                    }
+                }
+                    </div>
+
+
+                <!-- For the IT Proficiencies group of CV Page -->
+
+                <div class="container" style="padding-top: 10px;">
+                    <h2>@Model.Value("iTProficienciesTitle")</h2>
+
+                            @{
+                                if (Model.Value<string[]>("iTProficienciesList").Length > 0)
+                                {
+                                    <ul>
+                                        @foreach (var item in Model.Value<string[]>("iTProficienciesList"))
+                                        {
+                                            <li>@item</li>
+                                        }
+                                    </ul>
+                                }
+                            }
+                                </div>
+
+
+                            <!-- For the Personal group of CV Page -->
+                            <div class="container" style="padding-top: 10px; padding-bottom: 100px;">
+                                <h2>@Model.Value("personalTitle")</h2>
+
+                                    <div style="padding-top: 10px;">
+
+                                        @Model.Value("personalContent")
+                                    </div>
+                            </div>
