--- a/UmbracoCV/Views/AboutMe.cshtml
+++ b/UmbracoCV/Views/AboutMe.cshtml
@@ -1,6 +1,41 @@
 ﻿@using Umbraco.Cms.Web.Common.PublishedModels;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.AboutMe>
 @using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
+
+
+    @{
+    Layout = "Master.cshtml";
+
+    }
+    <!-- Jumbotron, w title -->
+    <div class="jumbotron text-center jumbotron-fluid">
+        <div class="container" style="padding-top: 10px;">
+            <h1 class="display-1">@Model.Value("bodyTitle")</h1>
+        </div>
+    </div>
+
+    <div class="container" style="padding-top: 10px;">
+        <h2>@Model.Value("bodyTitle")</h2>
+        @Model.Value("bodyText")
+    </div>
+    <div class="container" style="padding-top: 10px;">
+
+        <div class="form-group"><label for="Value">Value</label><input class="form-control item" type="text" id="Value" name="Value"></div>
+        <div class="form-group"><button class="btn btn-primary btn-block btn-lg" type="submit">Click button</button></div>
+    </div>
 @{
-	Layout = "Master.cshtml";
+
+    var mediaItem = Umbraco.Media(Guid.Parse("b30aef4b-7833-4e20-b844-37b35b45cac2"));
+
+    if (mediaItem != null)
+    {
+        // To get the url for your media item, you use the Url method:
+        var url = mediaItem.Url();
+        // to read a property by alias
+        var imageHeight = mediaItem.Value<int>("umbracoHeight");
+        var imageWidth = mediaItem.Value<int>("umbracoWidth");
+        var orientationCssClass = imageWidth > imageHeight ? "img-landscape" : "img-portrait";
+
+        <img src="@url" alt="@mediaItem.Name" class="@orientationCssClass"/>
+    }
 }
