--- a/UmbracoCV/Views/ArticlesMain.cshtml
+++ b/UmbracoCV/Views/ArticlesMain.cshtml
@@ -2,54 +2,50 @@
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.ArticlesMain>
 @using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
 @{
-	Layout = "Master.cshtml";
+    Layout = "Master.cshtml";
 }
 <!DOCTYPE HTML>
 
-		
-		<!-- Jumbotron, w title -->
-		<div class="jumbotron text-center jumbotron-fluid">
-			<div class="container">
-				<h1 class="display-1">@Model.Value("blogTitle")</h1>
-			</div>
-		</div>
+<!-- Jumbotron, w title -->
+<div class="jumbotron text-center jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-1">@Model.Value("blogTitle")</h1>
+    </div>
+</div>
 
-		<!-- Main container -->
-		<div class="container">
+<!-- Main container -->
+<div class="container">
 
-			<!-- Featured blogpost -->
-			<div class="row section">
-				<div class="col-md-12">
-@Model.Value("blogBodyText")
-				</div>
-			</div>
+    <!-- Featured blogpost -->
+    <div class="row section">
+        <div class="col-md-12">
+            @Model.Value("blogBodyText")
+        </div>
+    </div>
 
-			<!-- Latest blog posts -->
-			<div class="row section">
-				<div class="col-md-12">
-					<h3>@Model.Value("blogPostPresentationText")
-</h3>
-					
-@{
-	var selection = Umbraco.Content(Guid.Parse("dadc6f54-48f9-47a9-b415-689ee44a69dc"))
-    .ChildrenOfType("blogPost")
-    .Where(x => x.IsVisible())
-    .OrderByDescending(x => x.CreateDate);
-}
-<ul>
-	@foreach (var item in selection)
-	{
-<article class="special">
-    <div class="articledate" > @item.CreateDate </div>
-    <div class="articletitle"><a href="@item.Url()">@item.Name()</a></div>
-    <div class="articlepreview">@Html.Truncate(item.Value("blogContent").ToString(), 20, true)<a href="@item.Url()">Read More..</a></div>
-</article>
-	}
-</ul>
+    <!-- Latest blog posts -->
+    <div class="row section">
+        <div class="col-md-12">
+            <h3>
+                @Model.Value("blogPostPresentationText")
+        </h3>
 
-
-				</div>
-			</div>
-
-
-		</div>
+        @{
+            var selection = Umbraco.Content(Guid.Parse("dadc6f54-48f9-47a9-b415-689ee44a69dc"))
+            .ChildrenOfType("blogPost")
+            .Where(x => x.IsVisible())
+            .OrderByDescending(x => x.CreateDate);
+        }
+        <ul>
+            @foreach (var item in selection)
+            {
+                <article class="special">
+                    <div class="articledate"> @item.CreateDate </div>
+                    <div class="articletitle"><a href="@item.Url()">@item.Name()</a></div>
+                    <div class="articlepreview">@Html.Truncate(item.Value("blogContent").ToString(), 20, true)<a href="@item.Url()">Read More..</a></div>
+                </article>
+            }
+        </ul>
+    </div>
+</div>
+</div>
